fix overflow on title

--- a/docs/main.css
+++ b/docs/main.css
@@ -216,4 +216,8 @@ nav ul li {
   .frameContentMobile {
     display: block;
   }
+
+  .frameHeaderTitle {
+    display: none;
+  }
 }
